--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -60,8 +62,10 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.5.3",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
